--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:fork": "vite --mode fork",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
