--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
+    "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@tanstack/vue-query": "^5.92.1",
+    "hardhat": "^2.22.5",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
-    "viem": "^2.43.2",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
@@ -22,7 +24,10 @@
     "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.9.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "~5.9.0",
+    "viem": "^2.43.3",
     "vite": "^7.3.0",
     "vue-tsc": "^3.1.4"
   }
