--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/Release
 node_modules/
 jspm_packages/
 cache/
+.vscode/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
